spacing issue fix

--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,6 @@
 
 @media (max-width: 530px) {
   .body {
-    padding: 5% 0 5% 0;
+    padding: 5% 0 5% 0
   }
 }
