--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,6 @@ a {
 body {
   background-color: inherit;
   margin: 10px;
-  place-items: center;
 }
 
 h1 {
